--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "mongodb": "^3.6.6",
     "next": "10.1.3",
+    "next-auth": "^3.15.1",
+    "next-connect": "^0.10.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^1.5.2",
+    "react-confirm-alert": "^2.7.0",
+    "react-dom": "17.0.2",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^7.1.2",
+    "react-toolbox": "^2.0.0-beta.13",
+    "use-local-storage-state": "^9.0.2",
+    "validate.js": "^0.13.1"
   }
 }
