--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "fuse.js": "^6.4.6",
     "mongodb": "^3.6.6",
     "next": "10.1.3",
     "next-auth": "^3.15.1",
