--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "fuse.js": "^6.4.6",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.6",
     "next": "10.1.3",
     "next-auth": "^3.15.1",
@@ -22,6 +23,7 @@
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.2",
     "react-toolbox": "^2.0.0-beta.13",
+    "sort-array": "^4.1.4",
     "use-local-storage-state": "^9.0.2",
     "validate.js": "^0.13.1"
   }
