--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^7.1.2",
+    "react-select": "^4.3.0",
     "react-toolbox": "^2.0.0-beta.13",
     "sort-array": "^4.1.4",
     "use-local-storage-state": "^9.0.2",
